feat: made PrintUtils a separate module

--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,6 @@
     <modules>
         <module>core</module>
         <module>app</module>
+        <module>utils</module>
     </modules>
 </project>
