--- a/app/pom.xml
+++ b/app/pom.xml
@@ -18,6 +18,11 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>com.employeemanagement</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.14.1</version>
